# 0.00.38 (57960) Oct 24, 2011
Fluid flow: Restrict flow rate to be more than or equal to 1000 L/s, this prevents too many red dots from piling up
Fluid flow: Restrict flow rate to be less than or equal to 10000 L/s, this prevents negative pressure situations
Fluid flow: Update the pressure readout when the user changes the flow rate
# 0.00.37 (57958) Oct 24, 2011
Updated handle images for pipe and hose to have "grip" texture
# 0.00.36 (57926) Oct 24, 2011
Replaced T-handle with circle handle for pipe and hose
# 0.00.35 (57619) Oct 13, 2011
Fluid Flow: moved the density control in front of the pipe so it doesn't get overlapped
# 0.00.34 (57615) Oct 13, 2011
Fixed: the ruler can be dragged off the canvas
Fluid flow: Fixed: If the right hand pipe is fully expanded there is visual interference with the fluid density box.
Fixed: the ruler is leaving "ghosting" litter on the screen
Fluid flow: Constrain the pipe so it can't become too wide or thin to reduce dye misshaping problems
Fluid flow: Fixed: Pipe pressure can become negative
# 0.00.33 (57585) Oct 12, 2011
Addressed review issues, see #3097
Switched to use piccolo slider instead of swing slider to avoid mac problems, see #3101 #3097
# 0.00.32 (57091) Sep 30, 2011
Water tower: Fixed: Sometimes repeated clicks on the "Fill" button don't work when the door is open
# 0.00.31 (57080) Sep 29, 2011
Flow tab: Changed flow speed calculation from speed = flowRate / crossSectionalHeight to speed = flowRate / crossSectionalArea
# 0.00.30 (57029) Sep 29, 2011
Water tower: Control the hose with handles instead of dragging the hose itself
Water tower: Start the tank partly full so that the "fill" button and faucet slider are initially enabled
# 0.00.29 (56846) Sep 22, 2011
Water tower: Added new handle image from NP
Flow tab: Made the red stripe go all the way to the edges, since friction is accounted for elsewhere
Pressure tab: Made pool gradient darker so it doesn't blend in with the air too much